--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-Hello , this is the first time I use github page.
-I am still trying to figure out.
+<p>Hello , this is the first time I use github page.<br>I am still trying to figure out.</p>
